# test-common-api

./: .gitignore  CMakeLists.txt  README.md
cgen/commonapi_core_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.1
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.1  .fileTable.2
cgen/commonapi_dbus_generator/: artifacts.xml
cgen/commonapi_dbus_generator/commonapi-dbus-generator.app/Contents/: Info.plist
cgen/commonapi_dbus_generator/configuration/: config.ini
cgen/commonapi_dbus_generator/configuration/org.eclipse.core.runtime/: .contributors.1  .extraData.1  .mainData.1  .table.1
cgen/commonapi_dbus_generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/: framework.info.1
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.1  .fileTable.2
cgen/commonapi_dbus_generator/configuration/org.eclipse.update/: platform.xml
cgen/commonapi_dbus_generator/features/org.genivi.commonapi.dbus.cli.feature_3.2.0.v202012010857/: feature.xml
fidl/: HelloWorld.fidl
